--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,59 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <ion-header>
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title> Fund and Fortune </ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-content>
+    <ion-card class="center-card">
+      <ion-card-header >
+        <ion-card-title> Método do TikTok </ion-card-title>
+      </ion-card-header>
+
+      <ion-card-content>
+        <p>
+          Descubra um método direto e eficaz para renda online: a afiliação a
+          produtos e a geração de tráfego por meio de conteúdo de outros
+          criadores. Em resumo, seu trabalho se concentra em editar e
+          compartilhar esse conteúdo. Por que escolher o TikTok? Simples. Como a
+          maior plataforma de mídia social atual, o TikTok oferece oportunidades
+          de vendas praticamente ilimitadas, atingindo quase 100% de alcance.
+          Aproveite essa onda de sucesso no marketing de afiliados e
+          posicione-se para conquistar novos patamares no cenário digital.
+        </p>
+        <p></p>
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card class="center-card">
+      <img
+        alt="Silhouette of mountains"
+        src="../../assets/icon/metodo.png"
+      />
+
+      <ion-card-header>
+        <ion-card-title>Método do TikTok</ion-card-title>
+        <ion-card-subtitle> 20€ </ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content> 
+        <a href="https://go.hotmart.com/D90321405V" class="btn btn-success"> Comprar</a>
+      </ion-card-content>
+    </ion-card>
+  </ion-content>
+
+  <!-- Rodapé -->
+  <ion-footer>
+    <ion-toolbar>
+      <ion-title> © 2024 Fund and Fortune </ion-title>
+    </ion-toolbar>
+  </ion-footer>
+
+  <!-- Adicione os scripts do Ionic e do Angular -->
+  <script src="https://cdn.jsdelivr.net/npm/@ionic/core/js/ionic.bundle.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@angular/core/bundles/core.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@angular/common/bundles/common.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@angular/compiler/bundles/compiler.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@angular/platform-browser/bundles/platform-browser.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js"></script>
 </ion-content>
