--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -45,7 +45,7 @@
   <!-- Rodapé -->
   <ion-footer>
     <ion-toolbar>
-      <ion-title> © 2024 Fund and Fortune </ion-title>
+      <ion-title> © 2024 Instagram: FundAndFortune </ion-title>
     </ion-toolbar>
   </ion-footer>
 
